adds refactoring and animation

--- a/index.html
+++ b/index.html
@@ -10,62 +10,44 @@
 <body>
     <header>
         <h1>Dizzy's Drums</h1>
-        <h2>Press a key or click a drumpad to make a sound!</h2>
+        <h2>Press a number or click a drumpad to make a sound!</h2>
     </header>
         <section id="drumpads">
-            <div class="drumpad" id="1">
-                <div id="boom">
-                    <h3>1</h3>
-                    <h4>BOOM</h4>
-                </div>    
+            <div class="drumpad" id="boom">
+                <h3>1</h3>
+                <h4>BOOM</h4>  
             </div>
-            <div class="drumpad" id="2">
-                <div id="clap">
-                    <h3>2</h3>
-                    <h4>CLAP</h4>
-                </div>
+            <div class="drumpad" id="clap">
+                <h3>2</h3>
+                <h4>CLAP</h4>
             </div>
-            <div class="drumpad" id="3">
-                <div id="hihat">
-                    <h3>3</h3>
-                    <h4>HI-HAT</h4>
-                </div>
+            <div class="drumpad" id="hihat">
+                <h3>3</h3>
+                <h4>HI-HAT</h4>
             </div>
-            <div class="drumpad" id="4">
-                <div id="kick">
-                    <h3>4</h3>
-                    <h4>KICK</h4>
-                </div>
+            <div class="drumpad" id="kick">
+                <h3>4</h3>
+                <h4>KICK</h4>
             </div>
-            <div class="drumpad">
-                <div id="openhat">
-                    <h3>5</h3>
-                    <h4>OPEN-HAT</h4>
-                </div>
+            <div class="drumpad" id="openhat">
+                <h3>5</h3>
+                <h4>OPEN-HAT</h4>
             </div>
-            <div class="drumpad">
-                <div id="ride">
-                    <h3>6</h3>
-                    <h4>RIDE</h4>
-                </div>
+            <div class="drumpad" id="ride">
+                <h3>6</h3>
+                <h4>RIDE</h4>
             </div>
-            <div class="drumpad">
-                <div id="snare">
-                    <h3>7</h3>
-                    <h4>SNARE</h4>
-                </div>
+            <div class="drumpad" id="snare">
+                <h3>7</h3>
+                <h4>SNARE</h4>
             </div>
-            <div class="drumpad">
-                <div id="tink">
-                    <h3>8</h3>
-                    <h4>TINK</h4>
-                </div>
+            <div class="drumpad" id="tink">
+                <h3>8</h3>
+                <h4>TINK</h4>
             </div>
-            <div class="drumpad">
-                <div id="tom">
-                    <h3>9</h3>
-                    <h4>TOM</h4>
-                </div>
+            <div class="drumpad" id="tom">
+                <h3>9</h3>
+                <h4>TOM</h4>
             </div>
         </section>
     </main>
